# meerkat-personal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.github/ISSUE_TEMPLATE/: goal.md
.github/workflows/: ci.yml  goal.md
.github/workflows/scripts/: goal_scheduler.py
.github/workflows/shared/: reporting.md
meerkat/: Cargo.toml
meerkat-lib/src/: error.rs  lib.rs
meerkat-lib/src/net/: actor.rs  ast.rs  codec.rs  messages.rs  mock.rs  mod.rs  types.rs
meerkat-lib/src/runtime/: message.rs  mod.rs  txn.rs
meerkat-lib/src/runtime/ast/: mod.rs  printer.rs
meerkat-lib/src/runtime/def_actor/state/: history.rs
meerkat-lib/src/runtime/interpreter/: evaluator.rs  executor.rs
meerkat-lib/src/runtime/manager/: manager_def.rs  mod.rs
meerkat-lib/src/runtime/manager/action/: mod.rs  txn_manager.rs
meerkat-lib/src/runtime/manager/assert/: mod.rs
meerkat-lib/src/runtime/manager/init/: mod.rs
meerkat-lib/src/runtime/parser/: lex.rs  meerkat.lalrpop  mod.rs
meerkat-lib/src/runtime/pubsub/: mod.rs
meerkat-lib/src/runtime/semantic_analysis/typecheck/: mod.rs  tc_expr.rs  tc_stmt.rs  tc_test.rs  utils.rs
meerkat-lib/src/runtime/semantic_analysis/var_analysis/: alpha_rename.rs  dep_analysis.rs  mod.rs  read_write.rs
meerkat-lib/src/runtime/table_actor/: handler.rs
meerkat-lib/src/runtime/var_actor/: mod.rs
meerkat-lib/tests/: net_integration_test.rs
meerkat/src/: main.rs  repl.rs
meerkat/tests/: type_annotations.mkt
